--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A simple todo list app built in HTML, CSS and JavaScript.",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "api": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
