--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -16,6 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/themaxsandelin/todo.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
